// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ClusterListFilter /> renders correctly 1`] = `
<ForwardRef
  aria-label="Filter"
  className="cluster-list-filter"
  onChange={[Function]}
  placeholder="Filter by name or ID..."
  type="text"
  value=""
/>
`;

exports[`<ClusterListFilter /> renders correctly 2`] = `
<ForwardRef
  aria-label="Filter"
  className="cluster-list-filter"
  onChange={[Function]}
  placeholder="Filter by name or ID..."
  type="text"
  value="hello"
/>
`;
